add sbt logic and start landing to raw migration